--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,20 @@
 <body>
     <header>
         <h1>Book Review Blog</h1>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <nav>
+            <a href="/">Home</a>
+            <a href="/about">About</a>
+            <a href="/listings">Blog List</a>
+        </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <hr>
+    <main>
+        <h2>Reviews</h2>
+    </main>
+    <hr>
+    <footer>
+        <p>BRBlog © 2024</p>
+    </footer>
 </body>
 
 </html>
