--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Review Blog</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" text="text/css" href="./css/styles.css" />
 </head>
 
 <body>
@@ -20,6 +20,16 @@
     <hr>
     <main>
         <h2>Reviews</h2>
+        <div id="reviews-container">
+
+        </div>
+        <hr>
+        <h3>Submit Review</h3>
+        <form action="/" method="post" id="review-add">
+            <input type="text" id="title">
+            <textarea id="content"></textarea>
+            <button type="Submit">Submit</button>
+        </form>
     </main>
     <hr>
     <footer>
